Fixed scrollbar issues due to transitions

--- a/css/sehub.css
+++ b/css/sehub.css
@@ -25,7 +25,7 @@ html, body {
 
 #content {
     height: 100%;
-    overflow-y: auto;
+    overflow: hidden;
     position: relative;
 }
 
@@ -285,6 +285,7 @@ h1, h2, h3, h4, h5, h6 {
     position: absolute;
     top: 0;
     left: 0;
+    overflow-y: auto;
 }
 
 
